syntax = "proto3";

package signer;

option go_package = "github.com/YHVCorp/signer-service/proto";

service SignerService {
  rpc StreamSignRequests(Empty) returns (stream SignRequest);
  rpc ReportSignResult(SignResult) returns (Empty);
}

message Empty {}

message SignRequest {
  string request_id = 1;
  string file_name = 2;
  string download_url = 3;
  string upload_url = 4;
}

message SignResult {
  string request_id = 1;
  bool success = 2;
  string message = 3;
}